# multi-agent-research-assistant

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
evaluation/: eval_cases.jsonl  run_eval.py
examples/: run_example.py
src/magent/: __init__.py  api.py  config.py  graph.py  llm.py  memory.py  pipeline.py  state.py
src/magent/agents/: __init__.py  coder.py  critic.py  planner.py  researcher.py  synthesizer.py
src/magent/tools/: __init__.py  calculator.py  python_repl.py  web_search.py
tests/: test_agents.py  test_api.py  test_calculator.py  test_graph.py  test_memory.py  test_pipeline.py  test_python_repl.py
